# minesweeper

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
src/cli/: main.cpp
src/engine/: 2d_array.h  engine.cpp  engine.h  map.cpp  map.h  map_element.h
test/: dummy_test.cpp  engine_test.cpp  map_test.cpp
tools/: format.sh  is_formatted.sh
